# data_acquistion_test

./: .gitignore  CMakeLists.txt  Makefile  THIRD_PARTY.md  aquistion.cpp  fft_test  mcp3008spi.cpp  processing_thread.cpp  recieve.c  ringbuffer.cpp  ringbuffer.h  test5  test6  vibration-monitor
include/: inferenceEngine.h  mcp3008spi.h  processing_thread.h
model/: autoencoder_anomaly_detector.tflite
src/: aquistion.cpp  inferenceEngine.cpp  processing_thread.cpp
tests/: fft_test.cpp  fft_test_gtest.cpp  inference_test.cpp  ringbuffer_test.cpp  test_data.h
